--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0"
   }
 }
