--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "gulp": "^3.9.1",
+    "helmet": "^3.12.1",
+    "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "next": "^6.0.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
