--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "create-next-example-app",
   "scripts": {
     "dev": "./node_modules/.bin/next",
+    "server:dev": "pm2 start ./server/startup.dev.js --watch ./server --name react-app",
     "build": "./node_modules/.bin/next build",
     "start": "./node_modules/.bin/next start"
   },
   "dependencies": {
+    "@zeit/next-sass": "^0.2.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
@@ -16,6 +18,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "next": "^6.0.3",
+    "node-sass": "^4.9.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
