--- a/package.json
+++ b/package.json
@@ -4,28 +4,44 @@
     "dev": "./node_modules/.bin/next",
     "server:dev": "pm2 start ./server/startup.dev.js --watch ./server --name react-app",
     "build": "./node_modules/.bin/next build",
-    "start": "./node_modules/.bin/next start"
+    "start": "./node_modules/.bin/next start client"
   },
   "dependencies": {
+    "@babel/cli": "^7.0.0-beta.49",
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/preset-react": "^7.0.0-beta.49",
     "@zeit/next-sass": "^0.2.0",
+    "autoprefixer": "^8.5.1",
     "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "gulp": "^3.9.1",
     "helmet": "^3.12.1",
+    "isomorphic-unfetch": "^2.0.0",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "next": "^6.0.3",
+    "next-compose-plugins": "^2.1.1",
+    "next-images": "^0.10.2",
     "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.3.0",
+    "request": "^2.87.0",
+    "sass-loader": "^7.0.1",
+    "styled-jsx": "^2.2.6",
+    "styled-jsx-css-loader": "^0.3.0",
+    "webpack": "^4.10.2",
+    "webpack-upload": "^1.1.2"
   },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "babel-register": "^6.26.0"
-  }
+  "devDependencies": {}
 }
